# AromaNexus

./: .gitignore  LICENSE  README-CN.md  README.md  cb_spider.py  mffi_spider.py  name_to_cas.py  nist_excel_tool.py  pyproject.toml  start1.bat  start2.bat  start3.bat  start4.bat
.agents/skills/curate-aroma-data/: SKILL.md
.agents/skills/curate-aroma-data/agents/: openai.yaml
.agents/skills/curate-aroma-data/references/: output-schema.md  provider-matrix.md
.agents/skills/curate-aroma-data/scripts/: inspect_workbook.py
.agents/skills/curate-flavor-data/: SKILL.md
.agents/skills/curate-flavor-data/agents/: openai.yaml
.agents/skills/curate-flavor-data/scripts/: inspect_workbook.py
.github/workflows/: ci.yml
aromanexus/: __init__.py  __main__.py  cache.py  cli.py  excel_io.py  http.py  models.py  workflows.py
aromanexus/sources/: __init__.py  chemicalbook.py  m2or.py  mffi.py  nist.py  pubchem.py  pyrfume.py
benchmarks/: checkpoint_serialization.py
flavor_data_crawler/: __init__.py  cache.py  cli.py  excel_io.py  http.py  identifiers.py  models.py  workflows.py
flavor_data_crawler/sources/: __init__.py  chemicalbook.py  m2or.py  mffi.py  nist.py  pubchem.py  pyrfume.py
tests/: test_branding.py  test_browser_sources.py  test_cache.py  test_checkpoint_performance_guards.py  test_cli.py  test_excel_io.py  test_http.py  test_identifiers.py  test_m2or.py  test_nist.py  test_pubchem.py  test_pyrfume.py  test_skill.py  test_workflows.py  test_xlsx_preservation.py
tests/fixtures/: M2OR.synthetic.csv
