[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aromanexus"
version = "0.3.0"
description = "Provenance-aware integration for odorant, flavor-molecule, and olfactory-receptor data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "openpyxl>=3.1",
  "pandas>=2.1",
  "requests>=2.31",
  "selenium>=4.17",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
]
keywords = ["cheminformatics", "flavor", "odorant", "olfaction", "retention-index"]

[project.urls]
Repository = "https://github.com/rastagan-git/AromaNexus"
Issues = "https://github.com/rastagan-git/AromaNexus/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
aromanexus = "aromanexus.cli:main"
flavor-data = "aromanexus.cli:main"

[tool.setuptools.packages.find]
include = ["aromanexus*", "flavor_data_crawler*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
